Prevent text selection and adjust body overflow in main.css

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,6 +5,7 @@ html {
 body {
 	margin: 0;
 	min-height: 100vh;
+  overflow:hidden;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -31,6 +32,12 @@ body[data-section="models"] {
 * {
 	font-family: 'Sora', sans-serif;
 	box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 body.modal-open {
